welcome.lessons.welcome.variables.Variables.scala.error
Variables:10: error: type mismatch;
 found   : Unit
 required: Int
  dejaFait=dejaFait=1
                   ^